Revision history for Perl distribution Test-Class-Moose

0.42 2013-01-15
        - Remove experimental END block causing issues for some test suites.
        - Merge Dave Rolsky's MetaJSON request (thanks, Dave!)
        - Add better github meta info
        - Document recommended test suite instantiation.

0.41 2013-01-13
        - Fix bug where "skip_all" tests would report as failing if
          Sub::Attribute wasn't installed.

0.40 2013-01-12
        - Parallel tests now automatically ignore test methods tagged with
          'noparallel'.
        - Fix bug where sequential tests fail with parallel testing.
        - Remove long-deprecated test_reporting() method.
        - The second argument to test methods ($report) is now deprecated.
          Call $test->test_report instead.
        - You can now call has_tag() on a method report object.

0.30 [unreleased]
        - Experimental support for parallel testing. See
          Test::Class::Moose::Role::Parallel.

0.22 2013-08-17
        - Renamed tutorial from .pod to .pm to stop both cpan and metacpan
          from replacing main documentation with the tutorial.

0.21 2013-08-15
        - Fold on .t test into t/tags.t. Cleaner and stops some CPAN testers
          failures.

0.20 2013-08-15
        - Fix bug #87801 where excluded tags were ANDed instead of ORed.
          Stefan Corneliu Petrea.
        - The beginnings of a tutorial by Doug Bell (preaction)
        - Doc fix by Olaf Alders.
        - Tag inheritance added by Paul Boyd (see
          https://github.com/Ovid/test-class-moose/pull/10). This change is
          slightly backwards-incompatible, but not many people were yet using
          this module (or tags).

0.12 2013-05-27
        - Bugfix: test_classes attribute to constructor is allowed to be
          undef or an empty array ref.
        - add_to_plan() is now deprecated. Use plan() instead. This solves the
          problem where you might also have a before modifier wanting to alter